...
                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9NI-oi-kxj">
                                                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                                        <accessibility key="accessibilityConfiguration" identifier="editButton"/>
                                                                        <state key="normal" title="EditButton">
                                                                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timer" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3F-zd-h4a">
                                                                <rect key="frame" x="155" y="89.5" width="74" height="36"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="timerLabel"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HiC-GH-fsj">
                                                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="startButton"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                                        <state key="normal" title="START">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50s" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JL4-sr-RjC">
                                                        <rect key="frame" x="317" y="0.0" width="37" height="25"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="durationLabelET"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                        <nil key="textColor"/>
...
                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="15" minValue="2" maxValue="20" translatesAutoresizingMaskIntoConstraints="NO" id="owz-Lq-o0r" userLabel="DurationHorizontalSlider">
                                                <rect key="frame" x="-2" y="25" width="358" height="26"/>
                                                <accessibility key="accessibilityConfiguration" identifier="durationSlider"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="25" id="77B-2I-l2v"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="chQ-Zy-dXf">
                                                <rect key="frame" x="307" y="340" width="47" height="39"/>
                                                <accessibility key="accessibilityConfiguration" identifier="saveButton"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                <state key="normal" title="Save">
...
